--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "modules/xcode"]
 	path = modules/xcode
-	url = git@github.com:premake/premake-xcode.git
+	url = https://github.com/premake/premake-xcode.git
