Just want Windows CI to work!

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
-env:
- - BUILD="linux" RUN_TESTS=1
- - BUILD="windows" EXTRA_PACKAGES="" PREMAKE_OPTS="--os=windows" CC="i686-w64-mingw32-gcc" RUN_TESTS=0
+matrix:
+ include:
+# - os: linux                        # test linux32 later...
+#   env: BUILD="linux32" RUN_TESTS=1
+ - os: linux
+   env: BUILD="linux64" RUN_TESTS=1
+# - os: linux                        # arm build? (most distros have an arm archive)
+#   env: BUILD="linuxarm" RUN_TESTS=0
+ - os: linux
+   env: BUILD="windows" EXTRA_PACKAGES="" PREMAKE_OPTS="--os=windows" CC="i686-w64-mingw32-gcc" RUN_TESTS=0 LD_FLAGS=$LD_FLAGS src/lib/libole32.a
+# - os: osx
+#   env: BUILD="osx" RUN_TESTS=1     # we need to bootstrap osx somehow...
 
 before_install:
  - sudo add-apt-repository -y ppa:codegear/release
